# parsec-client-rust

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.toml  README.md
.cargo/: audit.toml
.github/actions/mock_tests/: action.yml
.github/workflows/: ci.yml  nightly.yml
src/: auth.rs  error.rs  lib.rs
src/core/: basic_client.rs  mod.rs  operation_client.rs  operation_handler.rs  request_client.rs  request_handler.rs
src/core/ipc_client/: unix_socket.rs
src/core/ipc_handler/: mod.rs  unix_socket.rs
src/core/testing/: core_tests.rs  mod.rs
src/tests/: core_tests.rs  mod.rs
tests/: ci.sh  coverage.sh  mock_service.rs
