[package]
name = "parsec-client"
version = "0.14.0"
authors = ["Contributors to the Parsec project"]
description = "Parsec Client library for the Rust ecosystem"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec-client-rust"
readme = "README.md"
keywords = ["parsec"]
categories = ["development-tools"]
edition = "2018"
documentation = "https://docs.rs/crate/parsec-client"

[dependencies]
parsec-interface = "0.26.0"
num = "0.3.0"
log = "0.4.11"
derivative = "2.1.1"
zeroize = "1.1.0"
users = "0.10.0"
url = "2.2.0"
spiffe = { version = "0.2.0", optional = true }

[dev-dependencies]
mockstream = "0.0.3"

[features]
default = []
spiffe-auth = ["spiffe"]
testing = ["parsec-interface/testing"]
